@startuml
interface org.springframework.beans.factory.config.SingletonBeanRegistry {
~ Object getSingleton(String)
}

interface org.springframework.beans.factory.support.BeanDefinitionRegistry {
~ void registerBeanDefinition(String,BeanDefinition)
}

class org.springframework.beans.BeansException {
}
abstract class org.springframework.beans.factory.support.AbstractBeanFactory {
+ Object getBean(String)
# {abstract}Object createBean(String,BeanDefinition)
# {abstract}BeanDefinition getBeanDefinition(String)
}

class org.springframework.beans.factory.config.BeanDefinition {
- Class beanClass
+ Class getBeanClass()
+ void setBeanClass(Class)
}


interface org.springframework.beans.factory.BeanFactory {
~ Object getBean(String)
}

class org.springframework.beans.factory.support.DefaultSingletonBeanRegistry {
- Map<String,Object> singletonObjects
+ Object getSingleton(String)
# void addSingleton(String,Object)
}


class org.springframework.beans.factory.support.DefaultListableBeanFactory {
- Map<String,BeanDefinition> beanDefinitionMap
+ void registerBeanDefinition(String,BeanDefinition)
# BeanDefinition getBeanDefinition(String)
}


abstract class org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory {
# Object createBean(String,BeanDefinition)
# Object doCreateBean(String,BeanDefinition)
}



org.springframework.beans.RuntimeException <|-- org.springframework.beans.BeansException
org.springframework.beans.factory.BeanFactory <|.. org.springframework.beans.factory.support.AbstractBeanFactory
org.springframework.beans.factory.support.DefaultSingletonBeanRegistry <|-- org.springframework.beans.factory.support.AbstractBeanFactory
org.springframework.beans.factory.config.SingletonBeanRegistry <|.. org.springframework.beans.factory.support.DefaultSingletonBeanRegistry
org.springframework.beans.factory.support.BeanDefinitionRegistry <|.. org.springframework.beans.factory.support.DefaultListableBeanFactory
org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory <|-- org.springframework.beans.factory.support.DefaultListableBeanFactory
org.springframework.beans.factory.support.AbstractBeanFactory <|-- org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory
@enduml